# py-any2text-parser

./: pyproject.toml  requirement.txt  test_pdf2text.py
.github/workflows/: publish-to-pypi.yml  pull-request.yml
