[tool.poetry]
name = "py-any2text-parser"
version = "1.0.0"
description = "Any2Text - any format to text using Unstructured.io"
authors = [
	"Vanson Leung <vanson@vanportdev.com>",
]
repository = "https://github.com/VansonLeung/py-any2text-parser"
license = "MIT"
readme = "README.rst"

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.9',
]

[tool.poetry.dependencies]
python = "^3.9"
jsonschema = "^4.4.0"

[tool.poetry.dev-dependencies]
# Starting from Python 3.9, asynctest is replaced with a unittest.mock.AsyncMock in standard library.
pytest = "^7"
pytest-asyncio = "^0.20.3"
pytest-cov = "^4.0.0"
sphinx = "^2.4.5"
black = "^22"
isort = "^5"
flake8 = "^5"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry>=1.1.11"]
build-backend = "poetry.masonry.api"